--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
   "devDependencies": {
     "@babel/core": "7.28.4",
     "@biomejs/biome": "2.2.5",
-    "@chromatic-com/storybook": "3.2.7",
+    "@chromatic-com/storybook": "4.1.1",
     "@storybook/addon-a11y": "9.1.10",
     "@storybook/addon-actions": "9.0.8",
-    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/addon-docs": "9.1.10",
     "@storybook/addon-links": "9.1.10",
     "@storybook/react": "9.1.10",
     "@storybook/react-vite": "9.1.10",
